@@ -1,7 +1,9 @@
 Changes in version 3.5.0 (released on 2011.12.28):
 * Update to Lucene 3.5.0 and fix some deprecated API usage.
-* Issue 49: fix faulty logic that prevented opening indexes in read-only mode.
-* Issue 43: fix left-over references to Field.
+* Issue 49: fix faulty logic that prevented opening indexes in read-only
+  mode (MarkHarwood).
+* Issue 43: fix left-over references to Field (merkertr).
+* Issue 42: Luke should indicate if a field is a numeric field (merkertr).
 
 Changes in version 3.4.0 (released on 2011.10.03):
 * Issue 46: and 47: Update to Lucene 3.4.0 and fix some changed APIs.
